--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -99,7 +99,7 @@
   </div>
 
   <script>
-    const API_URL = 'https://https://dashboard.render.com/web/srv-d0nmtgali9vc73ehc4t0'; // Substitua pelo URL do seu servidor no Render
+    const API_URL = 'https://centrodecompra-backend-1.onrender.com'; // Substitua pelo URL do seu servidor no Render
     let produtos = [];
     let currentImages = [];
     let currentImageIndex = 0;
